# plover_russian_trillo

./: MANIFEST.in  README.rst  plover_russian_trillo.py  setup.cfg  setup.py
plover_russian_trillo/: system.py
plover_russian_trillo/dictionaries/: prefixes.json  suffixes.json  trillo_prefixes.json  trillo_roots.json  trillo_suffixes.json
